Adding Dislikes to Swagger and Fix Controller
